Blog aloldalának reszponzivitása és véleményező gombok megcsinálása

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -138,9 +138,9 @@
                 </h2>
             </div>
             <div class="FoGombokDiv">
-                <button>SHARE</button>
-                <button>COMMENT</button>
-                <button>RATE</button>
+                <button class="BlogFoGomb">SHARE</button>
+                <button class="BlogFoGomb">COMMENT</button>
+                <button class="BlogFoGomb">RATE</button>
             </div>
             
         </div>
@@ -235,6 +235,20 @@
                     <div class="JobbKicsiBal">
                         <h3>Új nadrágok</h3>
                         <h4>2019. 09. 09</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/ruha5.jpg" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>Ismét nyár</h3>
+                        <h4>2021. 06. 11.</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
                         <button class="JobbKicsiGomb">READ MORE</button>
