a képen a felirat megcsinálva

--- a/home.html
+++ b/home.html
@@ -147,12 +147,19 @@
 
       <!--kiskartyak-->
       <div class="container">
-
-            <img id="kep" src="./Home képek/menssunglasses.png" alt="">
-            <img id="kep" src="./Home képek/noilab.jpeg" alt="">
-            <img id="kep" src="./Home képek/rolex.jpg" alt="">
-
-      </div>
+        <div class="image-box">
+            <img src="./Home képek/menssunglasses.png" alt="Men Sunglasses">
+            <div class="overlay">
+                <p class="banner-title">MEN SUNGLASSES</p>
+                <hr width="25%" class="vonalketto">
+                <p class="banner-discount">50%OFF</p>
+                <hr width="25%" class="vonalharom">
+                <button class="banner-btna">PURCHASE NOW</button>
+            </div>
+        </div>
+        <img id="kep" src="./Home képek/noilab.jpeg" alt="Női Lab">
+        <img id="kep" src="./Home képek/rolex.jpg" alt="Rolex">
+    </div>
 
 <!--footer-->
 
