Blog aloldalán írási hiba kijavítása

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -134,7 +134,7 @@
                     <br>
                     Boldog vásárlást kívánunk, és ne feledd: nálunk mindig találsz valami igazán csudajót! 😊
                     <br>
-                    A Csudajó Webáruház csapata
+                        ~ A Csudajó Webáruház csapata
                 </h2>
             </div>
             <div class="FoGombokDiv">
@@ -243,7 +243,7 @@
                 <hr>
                 <p class="hidden">a</p>
             </div>
-            <div class="JobbKepDivClass">
+            <div class="JobbKepDivClass" id="PostHidden">
                 <img src="../Blog képek/ruha5.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
                     <div class="JobbKicsiBal">
