home oldal base megcsinálva, új képek használva

--- a/home.html
+++ b/home.html
@@ -121,7 +121,6 @@
             <div id="slides" class="slides">
                 
                 <span class="slide"><img src="./Home képek/ralphhome.png" alt=""></span>
-                <span class="slide"><img src="./Home képek/homelanding.jpg" alt=""></span>
                 <span class="slide"><img src="./Home képek/meganfox.jpg" alt=""></span>
                 <span class="slide"><img src="./Home képek/ralphhome.png" alt=""></span>
                 <span class="slide"><img src="./Home képek/homelanding.jpg" alt=""></span>
@@ -157,8 +156,26 @@
                 <button class="banner-btna">PURCHASE NOW</button>
             </div>
         </div>
-        <img id="kep" src="./Home képek/noilab.jpeg" alt="Női Lab">
-        <img id="kep" src="./Home képek/rolex.jpg" alt="Rolex">
+        <div class="image-box">
+            <img src="./Home képek/noilab.jpeg" alt="Női láb">
+            <div class="overlay">
+                <p class="banner-title">LADIES FOOTWEAR</p>
+                <hr width="25%" class="vonalketto">
+                <p class="banner-discount">50%OFF</p>
+                <hr width="25%" class="vonalharom">
+                <button class="banner-btna">PURCHASE NOW</button>
+            </div>
+        </div>
+        <div class="image-box">
+            <img src="./Home képek/rolex.jpg" alt="Rolex">
+            <div class="overlay">
+                <p class="banner-title">MEN WATCHES</p>
+                <hr width="25%" class="vonalketto">
+                <p class="banner-discount">50%OFF</p>
+                <hr width="25%" class="vonalharom">
+                <button class="banner-btna">PURCHASE NOW</button>
+            </div>
+        </div>
     </div>
 
 <!--footer-->
@@ -189,5 +206,6 @@
 
     </footer>
       <script src="home.js"></script>
+      <script src="hambi.js"></script>
 </body>
 </html>
