IK-29 Contact us oldal telefonos nézetének elkezdése

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -122,9 +122,14 @@
             <input type="text" class="normal" placeholder="Name" required>
             <input type="email" class="normal" placeholder="E-mail" required>
             <p class="tajekoztato">Have you ordered from us before?</p>
-            <select name="" id="rendeltMar"><option value="Yes">Yes</option><option value="No">No</option></select>
+
+            <select name="" id="rendeltMar">
+                <option value="Yes">Yes</option>
+                <option value="No">No</option>
+            </select>
+        
             <textarea name="" id="uzenet" placeholder="Message"></textarea>
-            <button>Send</button>
+            <button id="SendGomb">Send</button>
         </div>
     </div>
     
