Contact us oldalon telefonos nézetbe a gomb javítása

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="../CSS/Coupons.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -129,7 +128,7 @@
             </select>
         
             <textarea name="" id="uzenet" placeholder="Message"></textarea>
-            <button type="submit">Send</button>
+            <button type="submit" id="SendGomb">Send</button>
         </form>
     </div>
     
