IK-28 miujsag email

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="main">
-        <form action="https://formsubmit.co/your@email.com" method="POST" class="urlap">
+        <form action="https://formsubmit.co/czakocsongor@turr.hu" method="POST" class="urlap">
             <p class="tajekoztato">If you can’t find the answer to you question, feel free to e-mail us here.</p>
             <input type="text" name="input" class="normal" placeholder="Name" required>
             <input type="email" class="normal" name="email" placeholder="E-mail" required>
