IK-28 menu link javítása

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="./HTML/blog.html" class="mobilMenuLinks">blog</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/" class="mobilMenuLinks">contact us</a>
+                        <a href="./HTML/contact.html" class="mobilMenuLinks">contact us</a>
                     </li>
                 </ul>
             </div>
