IK-33 IK-32 Menu linkelések és logOut oldal

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -60,7 +60,7 @@
                         <a class="lenyit2"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./myaccount.html" class="MobilDropdown">account details</a>
+                        <a href="./logOut.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
                         <a href="./myaccount.html" class="MobilDropdown">log out</a>
@@ -96,7 +96,7 @@
                     <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./myaccount.html" class="dropdownLinks">Log out</a>
+                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
