--- a/HTML/home.html
+++ b/HTML/home.html
@@ -59,7 +59,7 @@
                         <a href="./myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./myaccount.html" class="MobilDropdown">log out</a>
+                        <a href="./logOut.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
                         <a href="./coupons.html" class="MobilDropdown">coupons</a>
@@ -92,7 +92,7 @@
                     <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./myaccount.html" class="dropdownLinks">Log out</a>
+                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
