--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                     <div class="dropdown">
                         <a href="./index.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
                             <div class="dropdownMain">
-                                <a href="./HTML/myaccount.html" class="dropdownLinks">accessories</a>
-                                <a href="./HTML/myaccount.html" class="dropdownLinks">casual</a>
-                                <a href="./HTML/myaccount.html" class="dropdownLinks">clothing</a>
-                                <a href="./HTML/myaccount.html" class="dropdownLinks">men</a>
-                                <a href="./HTML/myaccount.html" class="dropdownLinks">women</a>  
+                                <a href="./index.html" class="dropdownLinks">accessories</a>
+                                <a href="./index.html" class="dropdownLinks">casual</a>
+                                <a href="./index.html" class="dropdownLinks">clothing</a>
+                                <a href="./index.html" class="dropdownLinks">men</a>
+                                <a href="./index.html" class="dropdownLinks">women</a>  
                             </div>
                     </div>  
                     <div class="dropdown">
