--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -60,7 +60,7 @@
                         <a href="./myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./myaccount.html" class="MobilDropdown">log out</a>
+                        <a href="./logOut.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
                         <a href="./coupons.html" class="MobilDropdown">coupons</a>
@@ -93,7 +93,7 @@
                     <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./myaccount.html" class="dropdownLinks">Log out</a>
+                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
@@ -200,7 +200,10 @@
         </div>
         <div class="JobbBlogDiv">
             <h2>Search</h2>
-            <input type="text" class="BlogSearchClass" placeholder="Keresés a blogok között">
+            <div class="KeresesDiv">     
+                <input type="text" class="BlogSearchClass" placeholder="Keresés a blogok között">       
+                <img id="keresesIkon" onclick="BlogKereses()" src="../Blog képek/free-search-icon-download-in-svg-png-gif-file-formats--find-magnifier-glass-magnify-ios-11-ui-elements-vol-2-pack-user-interface-icons-475061.webp" alt="" srcset="">
+            </div>
             <div class="RendezesNagyDiv">
                 <h3>Rendezés:</h3>
                 <select name="BlogKeresesSelectNev" id="BlogKeresesSelectID">
@@ -218,7 +221,7 @@
                         <h4>2019. 03. 22.</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -232,7 +235,7 @@
                         <h4>2021. 08. 11</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -246,7 +249,7 @@
                         <h4>2021. 07. 02</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -260,7 +263,7 @@
                         <h4>2020. 10. 28.</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -274,7 +277,7 @@
                         <h4>2024. 12. 08</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -288,7 +291,7 @@
                         <h4>2019. 09. 09</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <button class="JobbKicsiGomb">READ MORE</button>
+                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
                     </div>
                 </div>
                 <hr>
@@ -305,16 +308,16 @@
         </div>
         <div class="footDivKoz">
             <p class="footDivTeto">Contact Us</p>
-            <p class="contact"> <img src="./Weboldal képek/hazikoIcon.webp" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
-            <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> info@csudajoshop.com</p>
-            <p class="contact"> <img src="./Weboldal képek/teloIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
+            <p class="contact"> <img src="../Weboldal képek/hazikoIcon.webp" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
+            <p class="contact"> <img src="../Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> info@csudajoshop.com</p>
+            <p class="contact"> <img src="../Weboldal képek/teloIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
         </div>
         <div class="footDivJobb">
             
-            <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
+            <p class="footDivTeto"> <img src="../Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
             <p class="contact">Free shipping on all orders above $99</p>
 
-            <p class="footDivTeto"> <img src="./Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
+            <p class="footDivTeto"> <img src="../Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
             <p class="contact"> <img src="" alt="">100% money back guarantee</p>
 
 
