--- a/HTML/logOut.html
+++ b/HTML/logOut.html
@@ -28,6 +28,17 @@
         .kiiras:nth-child(1){
             margin-top: 20vh;
         }
+
+        footer{
+            position: absolute;
+            bottom: 0;
+        }
+
+        @media screen and (max-width: 870px) {
+            footer{
+                position: static;
+            }
+        }
     </style>
 
 </head>
