--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <title>Blog</title>
@@ -21,9 +21,8 @@
         <div class="felsoLec">
             <div class="webName">
                 <p class="oldalnev">Csudajó Áruház</p>
-                <p class="motto">Itt még romániát is megtalálod!</p>
+                <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
-
             <div class="hamburger">
                 <span></span>
                 <span></span>
@@ -112,6 +111,7 @@
             </div>
 
         </div>
+
     </div>
     <div class="route">
         <p>Home/Románia/Nincstalalat</p>
@@ -345,5 +345,6 @@
 
 <script src="./main.js"></script>
 <script src="../blog.js"></script>
+<script src="../hambi.js"></script>
 </body>
 </html>
