IK-34 linkelés javítása

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -90,7 +90,7 @@
                             </div>
                     </div>  
                     <div class="dropdown">
-                    <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
+                    <a href="./myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
                             <a href="./logOut.html" class="dropdownLinks">Log out</a>
