--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -147,7 +147,7 @@
 
                     <div class="valaszto"></div>
                     <div id="jobb">
-                        <p class="tajekoztato"><b>Rendeltél már tőlünk?</b></p>
+                        <p class="tajekoztato"><b>Ha rendeltél, milyennek találtad a szolgáltatásainkat?</b></p>
                         <div class="ertekeles">
                             <p>★</p>
                             <p>★</p>
@@ -161,7 +161,7 @@
                 </div>
 
             
-                <textarea name="textarea" id="uzenet" placeholder="Message"></textarea>
+                <textarea name="textarea" id="uzenet" placeholder="Üzenet"></textarea>
                 <button type="submit" id="SendGomb">Küldés</button>
             </form>
         </div>
