Contact oldal telefonos nézet + blog oldal csillag elkezdése

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -191,11 +191,17 @@
                 </h2>
             </div>
             <div class="FoGombokDiv">
-                <button class="BlogFoGomb">SHARE</button>
-                <button class="BlogFoGomb">COMMENT</button>
-                <button class="BlogFoGomb">RATE</button>
+                <button class="BlogFoGomb" id="BlogShareGomb">SHARE</button>
+                <button class="BlogFoGomb" id="BlogCommentGomb">COMMENT</button>    
+                <button class="BlogFoGomb" id="BlogRateGomb">RATE</button>
             </div>
-            
+            <div id="BlogRateCsillagokDiv">
+                <img src="../Weboldal képek/emailIcon.png" class="BlogRateCsillagIMG" alt="">
+                <img src="../Weboldal képek/emailIcon.png" class="BlogRateCsillagIMG" alt="">
+                <img src="../Weboldal képek/emailIcon.png" class="BlogRateCsillagIMG" alt="">
+                <img src="../Weboldal képek/emailIcon.png" class="BlogRateCsillagIMG" alt="">
+                <img src="../Weboldal képek/emailIcon.png" class="BlogRateCsillagIMG" alt="">
+            </div>
         </div>
 
 
