--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -119,9 +119,16 @@
     <div class="main">
         <div class="elerhetosegek">
             <p class="contactCim">Elérhetőségeink</p>
-            <p class="adatok"><b>Tel.: </b>+36 123 456<br>
-                <b>E-mail: </b>csudajoshop@gmail.com<br>
-                <b>Székhely: </b>Bácska Tér 1</p>
+            <p class="adatok">
+                <b>Tel.: </b>
+                +36 123 456
+                <br>
+                <b>E-mail: </b>
+                csudajoshop@gmail.com
+                <br>
+                <b>Székhely: </b>
+                Bácska Tér 1
+            </p>
         </div>
             <form action="https://formsubmit.co/czakocsongor@turr.hu" method="POST" class="urlap">
                 <p class="contactCim">Contact us</p>
@@ -147,7 +154,9 @@
 
                     <div class="valaszto"></div>
                     <div id="jobb">
-                        <p class="tajekoztato"><b>Ha rendeltél, milyennek találtad a szolgáltatásainkat?</b></p>
+                        <p class="tajekoztato">
+                            <b class="CsillagB">Ha rendeltél, milyennek találtad a szolgáltatásainkat?</b>
+                        </p>
                         <div class="ertekeles">
                             <p>★</p>
                             <p>★</p>
