--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -121,16 +121,16 @@
             <p class="contactCim">Elérhetőségeink</p>
             <p class="adatok"><b>Tel.: </b>+36 123 456<br>
                 <b>E-mail: </b>csudajoshop@gmail.com<br>
-                <b>Székhely: </b>Bácska Tér 1</p>
+                <b>Székhely: </b>6500 Baja, Bácska Tér 1</p>
         </div>
             <form action="https://formsubmit.co/czakocsongor@turr.hu" method="POST" class="urlap">
                 <p class="contactCim">Contact us</p>
 
                 <p class="tajekoztato"><b>A *-al jelölt mezők kitöltése kötelező.</b></p>
 
-                <input type="text" name="input" class="normal" placeholder="Név" required>
+                <input type="text" name="input" class="normal" placeholder="Név*" required>
 
-                <input type="email" class="normal" name="email" placeholder="E-mail" required>
+                <input type="email" class="normal" name="email" placeholder="E-mail*" required>
                 
                 <div class="rendeltE">
                     <div id="bal">
@@ -149,11 +149,19 @@
                     <div id="jobb">
                         <p class="tajekoztato"><b>Ha rendeltél, milyennek találtad a szolgáltatásainkat?</b></p>
                         <div class="ertekeles">
-                            <p>★</p>
-                            <p>★</p>
-                            <p>★</p>
-                            <p>★</p>
-                            <p>★</p>
+                            <div class="rating">
+                                <input value="5" name="rating" id="star5" type="radio">
+                                <label for="star5"></label>
+                                <input value="4" name="rating" id="star4" type="radio">
+                                <label for="star4"></label>
+                                <input value="3" name="rating" id="star3" type="radio">
+                                <label for="star3"></label>
+                                <input value="2" name="rating" id="star2" type="radio">
+                                <label for="star2"></label>
+                                <input value="1" name="rating" id="star1" type="radio">
+                                <label for="star1"></label>
+                            </div>
+  
                         </div>
     
                     </div>
@@ -195,6 +203,7 @@
     </footer>
 
 <script src="../hambi.js"></script>
+<script src="../ertekeles.js"></script>
 
 </body>
 </html>
