IK-35 cotact us reszponzivitás

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -147,7 +147,7 @@
 
                     <div class="valaszto"></div>
                     <div id="jobb">
-                        <p class="tajekoztato"><b>Ha rendeltél, milyennek találtad a szolgáltatásainkat?</b></p>
+                        <p class="tajekoztato"><b>Milyennek találtad a szolgáltatásainkat?</b></p>
                         <div class="ertekeles">
                             <div class="rating">
                                 <input value="5" name="rating" id="star5" type="radio">
