IK-24 account oldal asztali nézet

--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account</title>
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="../myaccount.css">
+    <link rel="stylesheet" href="../CSS/myaccount.css">
     
 </head>
 <body>
@@ -103,19 +103,22 @@
     
                 </div>    
             </div>
+
         </div>
     </div>
     <div class="route">
         <p>Home/Account/Coupons</p>
     </div>
-    <div class="container">
-        <p class="login"><label>Last Login:</label><span class="value" >2024.12.26 15:02</span></p>
-        <p><label>Name:</label><span class="value">Gipszkarton Géza</span></p>
-        <p><label>Billing address:</label><span class="value">6500 Baja Bácska tér 1.</span></p>
-        <p><label>Shipping address:</label><span class="value">6500 Baja Bácska tér 1.</span></p>
-        <p><label>Phone:</label><span class="value">+36116123 (ne hívd fel)</span></p>
-        <p><label>E-mail:</label><span class="value"><a href="mailto:gipszgeza73@citromail.ru">gipszgeza73@citromail.ru</a></span></p>
+    <div class="main">
+        <div class="containerAcc">
+            <p><label>Name:</label><span class="value">Gipszkarton Géza</span><button class=" szerkeszt">✎</button></p>
+            <p><label>Billing address:</label><span class="value">6500 Baja Bácska tér 1.</span><button class=" szerkeszt">✎</button></p>
+            <p><label>Shipping address:</label><span class="value">6500 Baja Bácska tér 1.</span><button class=" szerkeszt">✎</button></p>
+            <p><label>Phone:</label><span class="value">+36116123 (ne hívd fel)</span><button class=" szerkeszt">✎</button></p>
+            <p><label>E-mail:</label><span class="value"><a href="mailto:gipszgeza73@citromail.ru">gipszgeza73@citromail.ru</a></span><button class=" szerkeszt">✎</button></p>
 
+            <p class="login"><label>Last Login:</label><span class="value" >2024.12.26 15:02</span></p>
+        </div>
     </div>
     <script src="../hambi.js"></script>
 </body>
