IK-36 kártyaszűrő elkészítése az aloldalakhoz

--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
  
 
-    <title>Shop - Accessories</title>
+    <title>Shop - Men</title>
 </head>
 <body>
     <!--Menü és felsőléc-->
 
-    <p class="oldalType" style="display: none;">accessories</p>
+    <p class="oldalType" style="display: none;">men</p>
+    <p class="oldalgender" style="display: none;">M</p>
 
 
     <a href="" id="top"></a>
@@ -40,45 +41,45 @@
                     <li class="menuItem">
                         <a href="./HTML/home.html" class="mobilMenuLinks">home</a>
                     </li>
-                <li class="menuItem">
-                    <a href="./index.html" class="mobilMenuLinks">shop</a>
-                    <a class="lenyit"><i class="fa fa-plus"></i></a>
-                </li>
-                <li class="menuItemDropdown1">
-                    <a href="./HTML/accessories.html" class="MobilDropdown">accessories</a>
-                </li>
-                <li class="menuItemDropdown1">
-                    <a href="./HTML/shopCasual.html" class="MobilDropdown">casual</a>
-                </li>
-                <li class="menuItemDropdown1">
-                    <a href="./HTML/shopClothing.html" class="MobilDropdown">clothing</a>
-                </li>
-                <li class="menuItemDropdown1">
-                    <a href="./HTML/shopMen.html" class="MobilDropdown">men</a>
-                </li>
-                <li class="menuItemDropdown1">
-                    <a href="./HTML/shopWomen.html" class="MobilDropdown">women</a>
-                </li>
-                <li class="menuItem">
-                    <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
-                    <a class="lenyit2"><i class="fa fa-plus"></i></a>
-                </li>
-                <li class="menuItemDropdown2">
-                    <a href="./HTML/myaccount.html" class="MobilDropdown">account details</a>
-                </li>
-                <li class="menuItemDropdown2">
-                    <a href="./HTML/logout.html" class="MobilDropdown">log out</a>
-                </li>
-                <li class="menuItemDropdown2">
-                    <a href="./HTML/coupons.html" class="MobilDropdown">coupons</a>
-                </li>
-                <li class="menuItem">
-                    <a href="./HTML/blog.html" class="mobilMenuLinks">blog</a>
-                </li>
-                <li class="menuItem">
-                    <a href="./HTML/contact.html" class="mobilMenuLinks">contact us</a>
-                </li>
-            </ul>
+                    <li class="menuItem">
+                        <a href="./index.html" class="mobilMenuLinks">shop</a>
+                        <a class="lenyit"><i class="fa fa-plus"></i></a>
+                    </li>
+                    <li class="menuItemDropdown1">
+                        <a href="./HTML/accessories.html" class="MobilDropdown">accessories</a>
+                    </li>
+                    <li class="menuItemDropdown1">
+                        <a href="./HTML/shopCasual.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItemDropdown1">
+                        <a href="./HTML/shopClothing.html" class="MobilDropdown">clothing</a>
+                    </li>
+                    <li class="menuItemDropdown1">
+                        <a href="./HTML/shopMen.html" class="MobilDropdown">men</a>
+                    </li>
+                    <li class="menuItemDropdown1">
+                        <a href="./HTML/shopWomen.html" class="MobilDropdown">women</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
+                        <a class="lenyit2"><i class="fa fa-plus"></i></a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">account details</a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/logout.html" class="MobilDropdown">log out</a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/coupons.html" class="MobilDropdown">coupons</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/blog.html" class="mobilMenuLinks">blog</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/contact.html" class="mobilMenuLinks">contact us</a>
+                    </li>
+                </ul>
             </div>
 
 
