--- a/HTML/shopWomen.html
+++ b/HTML/shopWomen.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
  
 
-    <title>Shop - Accessories</title>
+    <title>Shop - Women</title>
 </head>
 <body>
     <!--Menü és felsőléc-->
 
-    <p class="oldalType" style="display: none;">accessories</p>
+    <p class="oldalType" style="display: none;">women</p>
+    <p class="oldalgender" style="display: none;">W</p>
 
 
     <a href="" id="top"></a>
