--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                         <a href="./HTML/accessories.html" class="MobilDropdown">accessories</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                        <a href="./HTML/shopCasual.html" class="MobilDropdown">casual</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">clothing</a>
+                        <a href="./HTML/shopClothing.html" class="MobilDropdown">clothing</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">men</a>
+                        <a href="./HTML/shopMen.html" class="MobilDropdown">men</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">women</a>
+                        <a href="./HTML/shopWomen.html" class="MobilDropdown">women</a>
                     </li>
                     <li class="menuItem">
                         <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
@@ -86,10 +86,10 @@
                         <a href="./index.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
                             <div class="dropdownMain">
                                 <a href="./HTML/accessories.html" class="dropdownLinks">accessories</a>
-                                <a href="./index.html" class="dropdownLinks">casual</a>
-                                <a href="./index.html" class="dropdownLinks">clothing</a>
-                                <a href="./index.html" class="dropdownLinks">men</a>
-                                <a href="./index.html" class="dropdownLinks">women</a>  
+                                <a href="./HTML/shopCasual.html" class="dropdownLinks">casual</a>
+                                <a href="./HTML/shopClothing.html" class="dropdownLinks">clothing</a>
+                                <a href="./HTML/shopMen.html" class="dropdownLinks">men</a>
+                                <a href="./HTML/shopWomen.html" class="dropdownLinks">women</a>  
                             </div>
                     </div>  
                     <div class="dropdown">
@@ -112,7 +112,7 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Románia/Nincstalalat</p>
+        <p>Home/Shop</p>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
@@ -135,7 +135,7 @@
                     <div class="column">
                         <div class="card">
                             <div class="card-container">
-                                <img src="./TermekKartyak/niggercollarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
+                                <img src="./TermekKartyak/collarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
                                 <div class="ikonok">
                                     <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
                                     <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
@@ -157,7 +157,7 @@
                     <div class="column">
                         <div class="card">
                             <div class="card-container">
-                            <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" class="kartyaKepek">
+                            <img src="./TermekKartyak/gentsTshirt.jpg" alt="gentstshirt" class="kartyaKepek">
                             <div class="ikonok">
                                 <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
                                 <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
