IK-34, IK-36 Menülinkek javítása és JS tömb feltöltése

--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -39,45 +39,45 @@
             <div id="mobilMenu">
                 <ul class="egeszMobil">
                     <li class="menuItem">
-                        <a href="./HTML/home.html" class="mobilMenuLinks">home</a>
+                        <a href="./home.html" class="mobilMenuLinks">home</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./index.html" class="mobilMenuLinks">shop</a>
+                        <a href="../index.html" class="mobilMenuLinks">shop</a>
                         <a class="lenyit"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/accessories.html" class="MobilDropdown">accessories</a>
+                        <a href="./accessories.html" class="MobilDropdown">accessories</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/shopCasual.html" class="MobilDropdown">casual</a>
+                        <a href="./shopCasual.html" class="MobilDropdown">casual</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/shopClothing.html" class="MobilDropdown">clothing</a>
+                        <a href="./shopClothing.html" class="MobilDropdown">clothing</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/shopMen.html" class="MobilDropdown">men</a>
+                        <a href="./shopMen.html" class="MobilDropdown">men</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="./HTML/shopWomen.html" class="MobilDropdown">women</a>
+                        <a href="./shopWomen.html" class="MobilDropdown">women</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
+                        <a href="./myaccount.html" class="mobilMenuLinks">my account</a>
                         <a class="lenyit2"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">account details</a>
+                        <a href="./myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./HTML/logout.html" class="MobilDropdown">log out</a>
+                        <a href="./logout.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./HTML/coupons.html" class="MobilDropdown">coupons</a>
+                        <a href="./coupons.html" class="MobilDropdown">coupons</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/blog.html" class="mobilMenuLinks">blog</a>
+                        <a href="./blog.html" class="mobilMenuLinks">blog</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/contact.html" class="mobilMenuLinks">contact us</a>
+                        <a href="./contact.html" class="mobilMenuLinks">contact us</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
             <div class="foMenu">
                 <!--Asztali nézet-->
                 <div class="asztaliNezet">
-                    <a href="./HTML/home.html" class="menuLinks">home</a>                     
+                    <a href="./home.html" class="menuLinks">home</a>                     
                     <div class="dropdown">
                         <a href="../index.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
                             <div class="dropdownMain">
