--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -33,37 +33,37 @@
             <!--Mobil nézet-->
             <div id="mobilMenu">
                 <ul class="egeszMobil">
-                        <li class="menuItem">
-                            <a href="./home.html" class="mobilMenuLinks">home</a>
-                        </li>
+                    <li class="menuItem">
+                        <a href="./home.html" class="mobilMenuLinks">home</a>
+                    </li>
                     <li class="menuItem">
                         <a href="../index.html" class="mobilMenuLinks">shop</a>
                         <a class="lenyit"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="../index.html" class="MobilDropdown">accessories</a>
+                        <a href="./accessories.html" class="MobilDropdown">accessories</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="../index.html" class="MobilDropdown">casual</a>
+                        <a href="./shopCasual.html" class="MobilDropdown">casual</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="../index.html" class="MobilDropdown">clothing</a>
+                        <a href="./shopClothing.html" class="MobilDropdown">clothing</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="../index.html" class="MobilDropdown">men</a>
+                        <a href="./shopMen.html" class="MobilDropdown">men</a>
                     </li>
                     <li class="menuItemDropdown1">
-                        <a href="../index.html" class="MobilDropdown">women</a>
+                        <a href="./shopWomen.html" class="MobilDropdown">women</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
+                        <a href="./myaccount.html" class="mobilMenuLinks">my account</a>
                         <a class="lenyit2"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./logOut.html" class="MobilDropdown">account details</a>
+                        <a href="./myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./myaccount.html" class="MobilDropdown">log out</a>
+                        <a href="./logout.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
                         <a href="./coupons.html" class="MobilDropdown">coupons</a>
@@ -85,11 +85,11 @@
                     <div class="dropdown">
                         <a href="../index.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></a>
                             <div class="dropdownMain">
-                                <a href="../index.html" class="dropdownLinks">accessories</a>
-                                <a href="../index.html" class="dropdownLinks">casual</a>
-                                <a href="../index.html" class="dropdownLinks">clothing</a>
-                                <a href="../index.html" class="dropdownLinks">men</a>
-                                <a href="../index.html" class="dropdownLinks">women</a>  
+                                <a href="./accessories.html" class="dropdownLinks">accessories</a>
+                                <a href="./shopCasual.html" class="dropdownLinks">casual</a>
+                                <a href="./shopClothing.html" class="dropdownLinks">clothing</a>
+                                <a href="./shopMen.html" class="dropdownLinks">men</a>
+                                <a href="./shopWomen.html" class="dropdownLinks">women</a>  
                             </div>
                     </div>  
                     <div class="dropdown">
