Routeok kijavítása, fejlécek oldalhoz igazítva

--- a/HTML/shopCasual.html
+++ b/HTML/shopCasual.html
@@ -116,7 +116,7 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Shop/Accessories</p>
+        <p>Home/Shop/Casual</p>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
