--- a/HTML/shopClothing.html
+++ b/HTML/shopClothing.html
@@ -116,13 +116,13 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Shop/Accessories</p>
+        <p>Home/Shop/Clothing</p>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
         <div class="bal">
             <div class="cim">
-                <h2>Casual</h2>
+                <h2>Clothing</h2>
             </div>
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
