--- a/HTML/accessories.html
+++ b/HTML/accessories.html
@@ -122,7 +122,7 @@
     <div class="main">
         <div class="bal">
             <div class="cim">
-                <h2>Casual</h2>
+                <h2>Accessories</h2>
             </div>
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
