--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -117,13 +117,13 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Shop/Accessories</p>
+        <p>Home/Shop/Men</p>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
         <div class="bal">
             <div class="cim">
-                <h2>Casual</h2>
+                <h2>Men</h2>
             </div>
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
