--- a/HTML/home.html
+++ b/HTML/home.html
@@ -122,7 +122,7 @@
                 <hr width="25%" class="vonal">
                 <p class="banner-discount">50% OFF</p>
                 <p class="banner-sub">FREE SHIPPING ABOVE 100$ PURCHASE</p>
-                <button class="banner-btn">SHOP NOW</button>
+                <a href="../index.html"><button class="banner-btn">SHOP NOW</button></a>
             </div>
         </header>
         
@@ -132,15 +132,15 @@
         
         <div class="categories">
             <div class="category">
-                <img src="../Home képek/ralpmen.jpg" alt="Men Fashion">
-                <h3>MEN</h3>
+                <a href="../HTML/shopMen.html"><img src="..//Home képek/ralpmen.jpg" alt="Women Fashion">
+                    <h3>WOMEN</h3></a>
             </div>
             <div class="offer">
                 <h2>GET YOURS NOW! 50% OFF</h2>
             </div>
             <div class="category">
-                <img src="..//Home képek/ralphwomen.png" alt="Women Fashion">
-                <h3>WOMEN</h3>
+                <a href="../HTML/shopWomen.html"><img src="..//Home képek/ralphwomen.png" alt="Women Fashion">
+                    <h3>WOMEN</h3></a>
             </div>
         </div>
         <div class="fastest">
