--- a/HTML/shopCasual.html
+++ b/HTML/shopCasual.html
@@ -176,11 +176,11 @@
                     <div class="kategoriaSzuroDiv">
                         <h2>Product categories</h2>
                         <ul id="szuzoKategoriakOl">
-                            <li class="szuroLiClass"><a href="" class="SzuroAnchor">Accessories</a></li>
-                            <li class="szuroLiClass"><a href="" class="SzuroAnchor">Casual</a></li>
-                            <li class="szuroLiClass"><a href="" class="SzuroAnchor">Clothing</a></li>
-                            <li class="szuroLiClass"><a href="" class="SzuroAnchor">Men</a></li>
-                            <li><a href="" class="SzuroAnchor , NoBorder">Women</a></li>
+                            <li class="szuroLiClass"><a href="../HTML/accessories.html" class="SzuroAnchor">Accessories</a></li>
+                            <li class="szuroLiClass"><a href="../HTML/shopCasual.html" class="SzuroAnchor">Casual</a></li>
+                            <li class="szuroLiClass"><a href="../HTML/shopClothing.html" class="SzuroAnchor">Clothing</a></li>
+                            <li class="szuroLiClass"><a href="../HTML/shopMen.html" class="SzuroAnchor">Men</a></li>
+                            <li><a href="../HTML/shopWomen.html" class="SzuroAnchor , NoBorder">Women</a></li>
                         </ul>
                     </div>
                 </div>
