--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Account</title>
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="../CSS/myaccount.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Menü és felsőléc-->
@@ -90,7 +90,7 @@
                     <a href="./myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
+                            <a href="./myaccount.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
@@ -103,7 +103,6 @@
     
                 </div>    
             </div>
-
         </div>
     </div>
     <div class="route">
